--- a/app-orden/.gitignore
+++ b/app-orden/.gitignore
@@ -1,6 +1,7 @@
-package-lock.json
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-node_modules/*
+# dependencies
+/node_modules
 /.pnp
 .pnp.js
 
